--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-action-button": "^2.8.4",
+    "react-native-modal-datetime-picker": "^5.1.0",
     "react-navigation": "^2.5.1"
   }
 }
