--- a/app.json
+++ b/app.json
@@ -1,5 +1,16 @@
 {
   "expo": {
-    "sdkVersion": "27.0.0"
+    "sdkVersion": "27.0.0",
+    "android": {
+      "package": "DashEventer"
+    },
+    "name": "countdown",
+    "slug": "countdown",
+    "version": "0.1.0",
+    "isDetached": true,
+    "detach": {
+      "scheme": "exp82e4bc94b4db47d789d36f6ff39bec65",
+      "androidExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/android-v2.5.3-sdk27.0.0-408c8d77-8d1f-4784-b7b4-93826250663a.tar.gz"
+    }
   }
 }
